--- a/todos@goals.html
+++ b/todos@goals.html
@@ -185,6 +185,26 @@
         };
       }
 
+      //Middleware
+
+      function checkAndDispatch(store, action) {
+        if (
+          action.type === ADD_TODO &&
+          action.todo.name.toLowerCase().includes("bitcoin")
+        ) {
+          return alert("Nope..That's a bad idea.");
+        }
+
+        if (
+          action.type === ADD_GOAL &&
+          action.goal.name.toLowerCase().includes("bitcoin")
+        ) {
+          return alert("Nope..That's a bad idea.");
+        }
+
+        return store.dispatch(action);
+      }
+
       //Creating the store
 
       const store = createStore(rootReducer);
@@ -204,7 +224,8 @@
         const name = input.value;
         input.value = "";
 
-        store.dispatch(
+        checkAndDispatch(
+          store,
           addTodoAction({
             name,
             complete: false,
@@ -218,7 +239,8 @@
         const name = input.value;
         input.value = "";
 
-        store.dispatch(
+        checkAndDispatch(
+          store,
           addGoalAction({
             name,
             id: generateId(),
@@ -240,7 +262,7 @@
         const node = document.createElement("li");
         const text = document.createTextNode(todo.name);
         const removeButton = createRemoveButton(() => {
-          store.dispatch(removeTodoAction(todo.id));
+          checkAndDispatch(store, removeTodoAction(todo.id));
         });
         node.appendChild(text);
         node.appendChild(removeButton);
@@ -248,7 +270,7 @@
         document.getElementById("todos").appendChild(node);
         node.style.textDecoration = todo.complete ? "line-through" : "none";
         node.addEventListener("click", () => {
-          store.dispatch(toggleTodoAction(todo.id));
+          checkAndDispatch(store, toggleTodoAction(todo.id));
         });
       }
 
@@ -256,7 +278,7 @@
         const node = document.createElement("li");
         const text = document.createTextNode(goal.name);
         const removeButton = createRemoveButton(() => {
-          store.dispatch(removeGoalAction(goal.id));
+          checkAndDispatch(store, removeGoalAction(goal.id));
         });
 
         node.appendChild(text);
